--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "bootstrap": "^5.0.2",
+    "axios": "^0.21.1 ",
+    "react-router-dom": "5.2.0",
+    "react-router": "5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router": "^5.1.15",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
